change title, fix thumbnail url

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESSENZ</title>
+    <title>Rotklee MenoFit Kapseln - Essenzshop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
@@ -68,7 +68,7 @@
             <div class="carousel">
                 <div class="thumbnails">
                     <div class="thumbnail" onclick="changeSlide(0)"><img src="images/carousel-main0.jpeg" alt="Thumbnail"></div>
-                    <div class="thumbnail" onclick="changeSlide(1)"><img src="images/carousel-thumbnail1.jpeg" alt="Thumbnail"></div>
+                    <div class="thumbnail" onclick="changeSlide(1)"><img src="https://placehold.co/85x85" alt="Thumbnail"></div>
                     <div class="thumbnail" onclick="changeSlide(2)"><img src="https://placehold.co/85x85" alt="Thumbnail"></div>
                     <div class="thumbnail" onclick="changeSlide(3)"><img src="https://placehold.co/85x85" alt="Thumbnail"></div>
                     <div class="thumbnail" onclick="changeSlide(4)"><img src="https://placehold.co/85x85" alt="Thumbnail"></div>
